--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ansi-styles": "^6.2.1",
     "array-flatten": "^1.1.1",
     "balanced-match": "^1.0.2",
+    "bcryptjs": "^2.4.3",
     "body-parse": "^0.1.0",
     "body-parser": "^1.20.2",
     "brace-expansion": "^2.0.1",
@@ -133,7 +134,6 @@
     "wrap-ansi": "^8.1.0",
     "wrap-ansi-cjs": "^7.0.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
